--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="ru.skillbranch.devintensive.ui.profile.ProfileActivity">
+        <activity
+            android:name="ru.skillbranch.devintensive.ui.profile.ProfileActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -18,5 +20,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
